session update
